ros2_ws/log/build_2024-04-11_16-22-59/robot_controller/stderr.log
  File "/home/keime/ros2_ws/install/robot_controller/lib/python3.10/site-packages/robot_controller/command_subscriber_action.py", line 57
    else:
    ^^^^
SyntaxError: invalid syntax

